Update footer content in brief.html
Removed theme and challenges from footer and added creator name.

--- a/brief.html
+++ b/brief.html
@@ -1552,8 +1552,7 @@ footer {
   <div class="f-brand">Tau<em>ron</em></div>
   <div class="f-meta">
     Cornell Digital Ag Hackathon · Feb 27–Mar 1, 2026<br>
-    Theme · Data-Driven, Human-Centric Digital Agriculture Innovations<br>
-    Primary Challenge · Secondary Challenge · Branch 2 · Sensor-Optional
+    Made by Adi
   </div>
 </footer>
 
