feat: add homepage landing page with hero, feature cards, and pipeline overview Co-authored-by: Krish Jana <krish.jana061@gmail.com>

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
     <script type="text/babel" src="components/HerdMap.js"></script>
     <script type="text/babel" src="components/DataEntryLog.js"></script>
     <script type="text/babel" src="components/SustainabilityImpact.js"></script>
+    <script type="text/babel" src="components/Homepage.js"></script>
     <script type="text/babel" src="components/Layout.js"></script>
 
     <!-- Main App -->
