--- a/reveal_slides.html
+++ b/reveal_slides.html
@@ -633,7 +633,7 @@
                     Cornell Digital Ag Hackathon · 2026
                 </span>
 
-                <h1 class="slide-hero" style="color: var(--bg); margin-bottom: 12px;">Tauron</h1>
+                <h1 class="slide-hero" style="color: var(--bg); margin-bottom: 12px;">Tauron<span style="color: var(--sage); font-style: italic;">.</span></h1>
 
                 <p style="font-size: 0.7em; color: rgba(242,237,228,0.6); max-width: 70%; margin: 0 auto 28px; line-height: 1.45;">
                     Graph Neural Network early warning system for dairy herd disease —<br>
