--- a/reveal_slides.html
+++ b/reveal_slides.html
@@ -371,6 +371,16 @@
             text-transform: uppercase;
         }
 
+        .stat-detail {
+            font-size: 0.28em;
+            color: var(--mist);
+            opacity: 0.7;
+            margin-top: 10px;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            display: block;
+        }
+
         /* ── Tier Columns ────────────────────────────────────────────────────── */
         .tier-col {
             flex: 1;
@@ -968,30 +978,33 @@
                                 Architecture</span><br>
 
                             <div style="margin-bottom: 8px;">
-                                <span style="color: var(--sage-lt); font-weight: 700;">Raw Data</span><br>
-                                <span style="color: var(--mist); opacity: 0.8;">Trends (7 signals) over 9 days</span>
+                                <span style="color: var(--sage-lt); font-weight: 700;">Multi-Sensor Input</span><br>
+                                <span style="color: var(--mist); opacity: 0.8;">Analyzes 7 vital signals over 9
+                                    days</span>
                             </div>
 
                             <span style="color: rgba(242,237,228,0.3);">↓</span>
 
                             <div style="margin-bottom: 8px;">
-                                <span style="color: var(--sage-lt); font-weight: 700;">Time Trends (GRU)</span><br>
-                                <span style="color: var(--mist); opacity: 0.8;">Detects patterns in health
-                                    history</span>
+                                <span style="color: var(--sage-lt); font-weight: 700;">Temporal Analysis
+                                    (GRU)</span><br>
+                                <span style="color: var(--mist); opacity: 0.8;">Recognizes individual cow health
+                                    trajectories</span>
                             </div>
 
                             <span style="color: rgba(242,237,228,0.3);">↓</span>
 
                             <div style="margin-bottom: 8px;">
-                                <span style="color: var(--sage-lt); font-weight: 700;">Herd Contacts (GNN)</span><br>
-                                <span style="color: var(--mist); opacity: 0.8;">Traces risk through shared pen
-                                    space</span>
+                                <span style="color: var(--sage-lt); font-weight: 700;">Social Graph (GNN)</span><br>
+                                <span style="color: var(--mist); opacity: 0.8;">Tracks risk transmission via pen
+                                    contacts</span>
                             </div>
 
                             <span style="color: rgba(242,237,228,0.3);">↓</span>
 
                             <div style="margin-bottom: 4px;">
-                                <span style="color: var(--straw-lt); font-weight: 700;">Diagnosis</span><br>
+                                <span style="color: var(--straw-lt); font-weight: 700;">Tri-Disease
+                                    Prediction</span><br>
                                 <span style="color: var(--mist); opacity: 0.8;">Mastitis · BRD · Lameness
                                     Probabilities</span>
                             </div>
@@ -1018,19 +1031,22 @@
                         <div class="grid-2 fragment fade-left" data-fragment-index="2" style="gap: 12px;">
                             <div class="stat-card">
                                 <span class="stat-number">120K</span>
-                                <span class="stat-label">Parameters</span>
+                                <span class="stat-label">Model Parameters</span>
                             </div>
                             <div class="stat-card">
                                 <span class="stat-number">475KB</span>
-                                <span class="stat-label">Model weights</span>
+                                <span class="stat-label">Model Weight</span>
+
                             </div>
                             <div class="stat-card">
                                 <span class="stat-number">&lt;2s</span>
-                                <span class="stat-label">Inference time</span>
+                                <span class="stat-label">Edge Inference</span>
+                                <span class="stat-detail">Local Processing</span>
                             </div>
                             <div class="stat-card">
                                 <span class="stat-number">47/47</span>
-                                <span class="stat-label">Tests passing</span>
+                                <span class="stat-label">Tests Passing</span>
+                                <span class="stat-detail">Inference · API · Ingest</span>
                             </div>
                         </div>
 
@@ -1038,8 +1054,7 @@
                             style="margin-top: 4px;">
                             <p style="font-size: 0.52em; color: rgba(242,237,228,0.8); line-height: 1.5; margin: 0;">
                                 <strong style="color: var(--sage-lt);">Data sovereign by design.</strong><br>
-                                Ollama Mistral-7B runs locally on the farm server. No cow health data leaves the barn.
-                                Claude API is a cloud fallback only.
+                                Ollama Mistral-7B runs locally on our server. No cow health data leaves the barn.
                             </p>
                         </div>
                     </div>
