Update description of Mistral-7B deployment

--- a/reveal_slides.html
+++ b/reveal_slides.html
@@ -1054,7 +1054,7 @@
                             style="margin-top: 4px;">
                             <p style="font-size: 0.52em; color: rgba(242,237,228,0.8); line-height: 1.5; margin: 0;">
                                 <strong style="color: var(--sage-lt);">Data sovereign by design.</strong><br>
-                                Ollama Mistral-7B runs locally on our server. No cow health data leaves the barn.
+                               Private Cloud Mistral-7B runs in an encrypted silo. No cow health data is shared, stored, or used for training.
                             </p>
                         </div>
                     </div>
