--- a/reveal_slides.html
+++ b/reveal_slides.html
@@ -603,6 +603,7 @@
         /* ── Hide everything in fullscreen ───────────────────────────────────── */
         body.is-fullscreen .nav,
         body.is-fullscreen .hint { display: none; }
+        body.is-fullscreen { cursor: none; }
     </style>
 </head>
 
